k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: sk-binge-galaxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: sk-binge-galaxy
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
