k8s/postgres-managed.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sk-binge-galaxy
  annotations:
    production-ready: "true"
spec:
  type: ExternalName
  externalName: __MANAGED_PG_HOST__
